<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/md_theme_light_background"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/stopTypeImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@color/md_theme_light_surface"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_tram_24"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:strokeColor="@color/md_theme_light_secondary"
            app:strokeWidth="5dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/stopTypeImage"
            android:text="@string/stop_name"
            android:textColor="@color/md_theme_light_tertiary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stopDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stopName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/stopTypeImage"
            android:drawablePadding="2dp"
            android:text="@string/stop_distance" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/routeDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stopDistance"
            android:layout_toEndOf="@id/stopTypeImage"
            app:dividerInsetEnd="20dp"
            app:dividerInsetStart="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/routeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/routeDivider"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/stopTypeImage"
            android:drawablePadding="2dp"
            android:text="@string/route_number" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
