<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/md_theme_light_background"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deptRouteNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/route_number"
                android:textColor="@color/md_theme_light_tertiary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deptRouteSchedule"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".50"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:drawablePadding="2dp"
                android:gravity="right"
                android:text="@string/route_schedule" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deptRouteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="2dp"
            android:text="@string/route_name" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
